--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zadanie",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
